observability/jaeger/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui-path
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: asset-spy.online
      http:
        paths:
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
